--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,3 +14,9 @@ body div#wall #tag-3.slick{
 div#wall #tag-4 {
   display:none;
 }
+
+div#wall .parent #tag-5.slick {
+  background: url(../images/tag-5.png) no-repeat;
+  z-index: 3;
+  display: block;
+}
