--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,8 +15,6 @@ div#wall #tag-4 {
   display:none;
 }
 
-div#wall .parent #tag-5.slick {
-  background: url(../images/tag-5.png) no-repeat;
-  z-index: 3;
-  display: block;
+body div#wall .parent #tag-5.slick {
+  display: none;
 }
