--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -18,3 +18,7 @@ div#wall #tag-4 {
 body div#wall .parent #tag-5.slick {
   display: none;
 }
+
+div#wall div.parent div< div#tag-6 {
+  display: none;
+}
