--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -22,3 +22,7 @@ body div#wall .parent #tag-5.slick {
 body div#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
+
+body div#wall div.parent div > div:first-child #tag-7.slick {
+  display: none;
+}
